--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -97,7 +97,7 @@ window#waybar {
     background-color: #4b5263;
     color: #fff;
     border-radius: 0 0 20px 0;
-    padding-right: 20px;
+    padding: 0 20px 0 15px;
     margin-right: 10px;
 }
 
@@ -156,6 +156,7 @@ label:focus {
 #pulseaudio {
     background-color: #e06c75;
     color: #283c34;
+    padding-left: 15px;
 }
 
 #pulseaudio.muted {
