--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,6 +7,13 @@
     min-height: 0;
 }
 
+#window {
+    background-color: #98c379;
+    color: #282c34;
+    padding: 0 20px 0 10px;
+    border-radius: 0 20px 20px 0;
+}
+
 window#waybar {
     background-color: transparent;
     color: #ffffff;
@@ -15,14 +22,7 @@ window#waybar {
     transition-duration: .5s;
 }
 
-#window {
-    background-color: #98c379;
-    color: #282c34;
-    padding: 0 20px 0 10px;
-    border-radius: 0 20px 20px 0;
-}
-
-#window#waybar.empty {
+window#waybar.empty {
     background-color: transparent;
 }
 
@@ -101,20 +101,26 @@ window#waybar {
     margin-right: 10px;
 }
 
-#battery.charging {
-    color: #fdd835;
+#battery.full-from {
+    color: #7cb342;
+}
+
+#battery.concern {
+    color: #c0ca33;
+}
+
+#battery.warn {
+    color: #ffb300;
 }
 
 @keyframes blink {
     to {
-        background-color: #ffffff;
-        color: #000000;
+        color: #ffffff;
     }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
+    color: #e53935;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -122,8 +128,8 @@ window#waybar {
     animation-direction: alternate;
 }
 
-label:focus {
-    background-color: #000000;
+#battery.charging {
+    color: #fdd835;
 }
 
 #cpu {
@@ -133,8 +139,56 @@ label:focus {
     padding-left: 20px;
 }
 
+#cpu.good {
+    color: #7cb342;
+}
+
+#cpu.okay {
+    color: #c0ca33;
+}
+
+#cpu.concern {
+    color: #fdd835;
+}
+
+#cpu.high {
+    color: #ffb300;
+}
+
+#cpu.very-high {
+    color: #fb8c00;
+}
+
+#cpu.full {
+    color: #e53935;
+}
+
 #memory {
     background-color: #4b5263;
+}
+
+#memory.good {
+    color: #7cb342;
+}
+
+#memory.okay {
+    color: #c0ca33;
+}
+
+#memory.concern {
+    color: #fdd835;
+}
+
+#memory.high {
+    color: #ffb300;
+}
+
+#memory.very-high {
+    color: #fb8c00;
+}
+
+#memory.full {
+    color: #e53935;
 }
 
 #backlight {
@@ -144,13 +198,12 @@ label:focus {
 
 #network {
     background-color: #61afef;
-    color: #282c34;
     border-radius: 0 0 15px 0;
     padding-right: 15px;
 }
 
 #network.disconnected {
-    background-color: #f53c3c;
+    color: #5c6370;
 }
 
 #pulseaudio {
@@ -182,11 +235,16 @@ label:focus {
 }
 
 #temperature.critical {
-    color: #e06c75;
+    color: #e53935;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 #tray {
-    background-color: rgba(40, 44, 52, .3);
+    background-color: rgba(75, 82, 99, .3);
 }
 
 #idle_inhibitor {
