--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,7 +4,7 @@
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: "FantasqueSansMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
-    font-size: 18px;
+    font-size: 17px;
     min-height: 0;
 }
 
@@ -50,8 +50,8 @@
 
 #workspaces button {
     color: #ffffff;
-    border-bottom: 3px solid transparent;
-    padding: 0 2px 0 0;
+    border: none;
+    padding: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
@@ -255,7 +255,7 @@
     background-color: #d19a66;
     color: #757575;
     border-radius: 8px 0 0 8px;
-    padding-right: 10px;
+    padding-right: 16px;
 }
 
 #idle_inhibitor.activated {
