--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -12,8 +12,8 @@
     70% { color: @theme_bg_color; }
 
     to {
-        color: @theme_bg_color;
-        background-color: @warning_color;
+        background-color: @warning_bg_color;
+        color:            @theme_bg_color;
     }
 }
 
@@ -21,8 +21,8 @@
     70% { color: @theme_bg_color; }
 
     to {
-        color: @theme_bg_color;
-        background-color: @error_color;
+        background-color: @error_bg_color;
+        color:            @theme_bg_color;
     }
 }
 
@@ -33,19 +33,19 @@
 
 /* Reset all styles. */
 * {
-    border: none;
+    border:        none;
     border-radius: 0.4rem;
-    font-family: NotoSans Nerd Font, sans-serif;
-    font-size: 1.1rem;
-    min-height: 0;
-    margin: 0;
-    padding: 0;
+    font-family:   NotoSans Nerd Font, sans-serif;
+    font-size:     1.1rem;
+    min-height:    0;
+    margin:        0;
+    padding:       0;
 }
 
 #waybar {
-    color: @theme_text_color;
-    background-color: @theme_base_color;
-    border-top: 0.2rem solid @borders;
+    background-color: @theme_bg_color;
+    color:            @theme_fg_color;
+    border-top:       0.2rem solid @borders;
 }
 
 /* Adjust margins and padding for all modules. */
@@ -61,11 +61,9 @@
 #pulseaudio,
 #backlight,
 #language,
-#idle_inhibitor { padding: 0.4rem; }
-
+#idle_inhibitor    { padding: 0.4rem; }
 #workspaces button { padding: 0.4rem 0.2rem; }
-#mode,
-#window { padding: 0.4rem; }
+#mode, #window     { padding: 0.4rem; }
 
 
 /* ------------- *
@@ -73,9 +71,9 @@
  * ------------- */
 
 #mode {
-    color: @theme_selected_fg_color;
     background-color: @theme_selected_bg_color;
-    border-bottom: 0.3rem;
+    color:            @theme_selected_fg_color;
+    border-bottom:    0.3rem;
 }
 
 #window { font-size: 1rem; }
@@ -83,40 +81,44 @@
 #battery {
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-    animation-direction: alternate;
+    animation-direction:       alternate;
 }
-#battery.warning { color: @warning_color; }
-#battery.critical { color: @error_color; }
+#battery.warning  { color: @warning_bg_color; }
+#battery.critical { color: @error_bg_color;   }
 #battery.warning.discharging {
-    animation-name: blink-warning;
+    animation-name:     blink-warning;
     animation-duration: 3s;
 }
 #battery.critical.discharging {
-    animation-name: blink-critical;
+    animation-name:     blink-critical;
     animation-duration: 2s;
 }
 
 #pulseaudio.muted {
-    color: @theme_unfocused_fg_color;
     background-color: @theme_unfocused_bg_color;
+    color:            @theme_unfocused_fg_color;
 }
 
+#workspaces button { color: @theme_unfocused_fg_color; }
 #workspaces button.urgent {
-    color: @warning_color;
-    border-color: @warning_color;
+    background-color: @warning_bg_color;
+    color:            @warning_fg_color;
+    border-color:     @warning_color;
 }
 #workspaces button.focused {
-    background-color: @insensitive_bg_color;
-    border: 2px solid @borders;
+    background-color: @theme_base_color;
+    color:            @theme_text_color;
+    border:           2px solid @borders;
 }
 
 #idle_inhibitor.activated {
-    color: @theme_selected_fg_color;
     background-color: @theme_selected_bg_color;
+    color:            @theme_selected_fg_color;
 }
 
 #tray > .passive { -gtk-icon-effect: dim; }
 #tray > .needs-attention {
-    background-color: @warning_color;
+    background-color: @warning_bg_color;
+    color:            @warning_fg_color;
     -gtk-icon-effect: highlight;
 }
