--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -9,11 +9,11 @@
  * --------- */
 
 @keyframes blink-warning {
-    70% { color: @theme_bg_color; }
+    70% { color: @theme_base_color; }
 
     to {
         background-color: @warning_bg_color;
-        color:            @theme_bg_color;
+        color:            @theme_base_color;
     }
 }
 
@@ -22,7 +22,7 @@
 
     to {
         background-color: @error_bg_color;
-        color:            @theme_bg_color;
+        color:            @theme_base_color;
     }
 }
 
@@ -43,15 +43,15 @@
 }
 
 #waybar {
-    background-color: @theme_bg_color;
-    color:            @theme_fg_color;
+    background-color: @theme_base_color;
+    color:            @theme_text_color;
     border-top:       0.2rem solid @borders;
 }
 
 /* Adjust margins and padding for all modules. */
 .modules-left,
 .modules-center,
-.modules-right { margin-top: 0.2rem; }
+.modules-right { margin-top: 0.25rem; }
 
 #tray,
 #clock,
@@ -106,8 +106,8 @@
     border-color:     @warning_color;
 }
 #workspaces button.focused {
-    background-color: @theme_base_color;
-    color:            @theme_text_color;
+    background-color: @theme_bg_color;
+    color:            @theme_fg_color;
     border:           2px solid @borders;
 }
 
