--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,25 +4,28 @@
  * ============================================================== */
 
 
+@define-color special_fg_color #ffffff;
+
+
 /* --------- *
  * Keyframes *
  * --------- */
 
 @keyframes blink-warning {
-    70% { color: @theme_base_color; }
+    70% { color: @special_fg_color; }
 
     to {
-        background-color: @warning_bg_color;
-        color:            @theme_base_color;
+        background-color: @warning_color;
+        color:            @special_fg_color;
     }
 }
 
 @keyframes blink-critical {
-    70% { color: @theme_bg_color; }
+    70% { color: @special_fg_color}
 
     to {
-        background-color: @error_bg_color;
-        color:            @theme_base_color;
+        background-color: @error_color;
+        color:            @special_fg_color;
     }
 }
 
@@ -83,8 +86,8 @@
     animation-iteration-count: infinite;
     animation-direction:       alternate;
 }
-#battery.warning  { color: @warning_bg_color; }
-#battery.critical { color: @error_bg_color;   }
+#battery.warning  { color: @warning_color; }
+#battery.critical { color: @error_color;   }
 #battery.warning.discharging {
     animation-name:     blink-warning;
     animation-duration: 3s;
@@ -101,9 +104,9 @@
 
 #workspaces button { color: @theme_unfocused_fg_color; }
 #workspaces button.urgent {
-    background-color: @warning_bg_color;
-    color:            @warning_fg_color;
-    border-color:     @warning_color;
+    background-color: @warning_color;
+    color:            @special_fg_color;
+    border:           2px solid @warning_color;
 }
 #workspaces button.focused {
     background-color: @theme_bg_color;
@@ -118,7 +121,7 @@
 
 #tray > .passive { -gtk-icon-effect: dim; }
 #tray > .needs-attention {
-    background-color: @warning_bg_color;
-    color:            @warning_fg_color;
+    background-color: @warning_color;
+    color:            @special_fg_color;
     -gtk-icon-effect: highlight;
 }
