--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -36,16 +36,16 @@
 
 /* Reset all styles. */
 * {
-    border:        none;
-    border-radius: 0.4rem;
-    font-family:   NotoSans Nerd Font, sans-serif;
-    font-size:     1.1rem;
-    min-height:    0;
-    margin:        0;
-    padding:       0;
+    border:           none;
+    border-radius:    0.4rem;
+    font-family:      NotoSans Nerd Font, sans-serif;
+    font-size:        1.1rem;
+    min-height:       0;
+    margin:           0;
+    padding:          0;
 }
 
-#waybar {
+#waybar { 
     background-color: @theme_base_color;
     color:            @theme_text_color;
     border-top:       0.2rem solid @borders;
@@ -64,7 +64,10 @@
 #pulseaudio,
 #backlight,
 #language,
-#idle_inhibitor    { padding: 0.4rem; }
+#idle_inhibitor {
+    color:   inherit;
+    padding: 0.4rem;
+}
 #workspaces button { padding: 0.4rem 0.2rem; }
 #mode, #window     { padding: 0.4rem; }
 
@@ -97,10 +100,7 @@
     animation-duration: 2s;
 }
 
-#pulseaudio.muted {
-    background-color: @theme_unfocused_bg_color;
-    color:            @theme_unfocused_fg_color;
-}
+#pulseaudio.muted { color: @theme_unfocused_fg_color; }
 
 #workspaces button { color: @theme_unfocused_fg_color; }
 #workspaces button.urgent {
@@ -114,10 +114,7 @@
     border:           2px solid @borders;
 }
 
-#idle_inhibitor.activated {
-    background-color: @theme_selected_bg_color;
-    color:            @theme_selected_fg_color;
-}
+#idle_inhibitor.activated { color: @theme_selected_bg_color; }
 
 #tray > .passive { -gtk-icon-effect: dim; }
 #tray > .needs-attention {
